<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cat_card"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="14dp"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/iv_cat_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/img_desc"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:src="@color/cardview_dark_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@id/tv_cat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/cat_name"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_cat_image"
                app:layout_constraintTop_toTopOf="@id/iv_cat_image" />
            <TextView
                android:id="@+id/tv_cat_origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_origin_label"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_cat_name"
                app:layout_constraintStart_toStartOf="@id/tv_cat_name"
                app:layout_constraintEnd_toEndOf="@id/tv_cat_name"
                />

            <ImageView
                android:id="@+id/iv_line"
                android:contentDescription="@string/img_line_desc"
                android:layout_width="330dp"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:background="@color/material_dynamic_neutral10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cat_image" />
            <TextView
                android:id="@+id/tv_cat_temperament_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_temperament_label"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_line"
                />
            <TextView
                android:id="@+id/tv_cat_temperament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_text"
                android:textSize="14sp"
                android:layout_marginStart="6dp"
                app:layout_constraintTop_toTopOf="@id/tv_cat_temperament_label"
                app:layout_constraintStart_toEndOf="@id/tv_cat_temperament_label"
                />
            <ImageView
                android:id="@+id/iv_line2"
                android:contentDescription="@string/img_line_desc"
                android:layout_width="330dp"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/material_dynamic_neutral10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cat_temperament_label"
                />
            <TextView
                android:id="@+id/tv_colors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_colors_label"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_line2"
                />
            <TextView
                android:id="@+id/tv_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_text"
                android:textSize="14sp"
                android:layout_marginStart="6dp"
                app:layout_constraintTop_toTopOf="@id/tv_colors_label"
                app:layout_constraintStart_toEndOf="@id/tv_colors_label"
                />
            <ImageView
                android:id="@+id/iv_line3"
                android:contentDescription="@string/img_line_desc"
                android:layout_width="330dp"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/material_dynamic_neutral10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_colors_label"
                />
            <TextView
                android:id="@+id/tv_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat_description_label"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_line3"
                />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:text="@string/description_example"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_label"
                tools:ignore="TextSizeCheck" />
            <ImageView
                android:id="@+id/iv_line4"
                android:contentDescription="@string/img_line_desc"
                android:layout_width="330dp"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/material_dynamic_neutral10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_go_back"
        android:contentDescription="@string/go_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:backgroundTint="#D3D3D3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</androidx.constraintlayout.widget.ConstraintLayout>